update content to include headers

--- a/content/cypress-fundamentals/aliases.mdx
+++ b/content/cypress-fundamentals/aliases.mdx
@@ -1,5 +1,10 @@
 ---
 title: Aliases
 ---
+# Aliases
 
-Aliases
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
