--- a/content/cypress-fundamentals/cypress-best-practices.mdx
+++ b/content/cypress-fundamentals/cypress-best-practices.mdx
@@ -1,5 +1,10 @@
 ---
 title: Cypress Best Practices
 ---
+# Cypress Best Practices
 
-Cypress Best Practices
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
