--- a/content/cypress-fundamentals/waiting-and-retry-ability.mdx
+++ b/content/cypress-fundamentals/waiting-and-retry-ability.mdx
@@ -1,5 +1,10 @@
 ---
 title: Waiting & Retry-ability
 ---
+# Waiting & Retry-ability
 
-Waiting & Retry-ability
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
