--- a/content/real-world-examples/bank-accounts-overview-and-setup.mdx
+++ b/content/real-world-examples/bank-accounts-overview-and-setup.mdx
@@ -1,7 +1,7 @@
 ---
-title: Submitting a payment to another user
+title: Bank Accounts Overview & Setup
 ---
-# Submitting a payment to another user
+# Bank Accounts Overview & Setup
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
