--- a/content/real-world-examples/creating-a-new-bank-account.mdx
+++ b/content/real-world-examples/creating-a-new-bank-account.mdx
@@ -1,5 +1,10 @@
 ---
 title: Creating a New Bank Account
 ---
+# Creating a New Bank Account
 
-Creating a New Bank Account
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
