--- a/content/real-world-examples/invalid-users.mdx
+++ b/content/real-world-examples/invalid-users.mdx
@@ -1,5 +1,10 @@
 ---
 title: Invalid Users
 ---
+# Invalid Users
 
-Invalid Users
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
