--- a/content/real-world-examples/login-errors.mdx
+++ b/content/real-world-examples/login-errors.mdx
@@ -1,5 +1,10 @@
 ---
 title: Login Errors
 ---
+# Login Errors
 
-Login Errors
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
