--- a/content/real-world-examples/searching-by-attributes.mdx
+++ b/content/real-world-examples/searching-by-attributes.mdx
@@ -1,5 +1,10 @@
 ---
 title: Searching by attributes
 ---
+# Searching by attributes
 
-Searching by attributes
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
