--- a/content/real-world-examples/sign-up-login-create-bank-account-and-logout.mdx
+++ b/content/real-world-examples/sign-up-login-create-bank-account-and-logout.mdx
@@ -1,7 +1,7 @@
 ---
-title: Submitting a payment to another user
+title: Sign-up, Login, Create Bank Account and Logout
 ---
-# Submitting a payment to another user
+# Sign-up, Login, Create Bank Account and Logout
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
