--- a/content/real-world-examples/unauthenticated-users.mdx
+++ b/content/real-world-examples/unauthenticated-users.mdx
@@ -1,5 +1,10 @@
 ---
 title: Unauthenticated Users
 ---
+# Unauthenticated Users
 
-Unauthenticated Users
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
