--- a/content/real-world-examples/updating-user-settings.mdx
+++ b/content/real-world-examples/updating-user-settings.mdx
@@ -1,5 +1,10 @@
 ---
 title: Updating User Settings
 ---
+# Updating User Settings
 
-Updating User Settings
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
