--- a/content/real-world-examples/user-settings-overview-and-setup.mdx
+++ b/content/real-world-examples/user-settings-overview-and-setup.mdx
@@ -1,7 +1,7 @@
 ---
-title: Submitting a payment to another user
+title: User Settings Overview & Setup
 ---
-# Submitting a payment to another user
+# User Settings Overview & Setup
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
