--- a/content/real-world-examples/users-without-bank-accounts.mdx
+++ b/content/real-world-examples/users-without-bank-accounts.mdx
@@ -1,5 +1,10 @@
 ---
 title: Users without Bank Accounts
 ---
+# Users without Bank Accounts
 
-Users without Bank Accounts
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
