--- a/content/testing-foundations/manual-vs-automated.mdx
+++ b/content/testing-foundations/manual-vs-automated.mdx
@@ -1,5 +1,10 @@
 ---
 title: Manual vs Automated
 ---
+# Manual vs Automated
 
-Manual vs Automated
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
