--- a/content/testing-foundations/testing-is-a-mindset.mdx
+++ b/content/testing-foundations/testing-is-a-mindset.mdx
@@ -1,5 +1,10 @@
 ---
 title: Testing is a Mindset
 ---
+# Testing is a Mindset
 
-Testing is a Mindset
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
