--- a/content/testing-your-first-application/how-to-use-cypress-commands.mdx
+++ b/content/testing-your-first-application/how-to-use-cypress-commands.mdx
@@ -1,5 +1,10 @@
 ---
 title: How to Use Cypress Commands
 ---
+# How to Use Cypress Commands
 
-How to Use Cypress Commands
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
