--- a/content/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
+++ b/content/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
@@ -1,5 +1,10 @@
 ---
 title: Installing Cypress & writing our first test
 ---
+# Installing Cypress & writing our first test
 
-Installing Cypress & writing our first test
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
