--- a/content/testing-your-first-application/negative-tests.mdx
+++ b/content/testing-your-first-application/negative-tests.mdx
@@ -1,5 +1,10 @@
 ---
 title: Negative Tests
 ---
+# Negative Tests
 
-Negative Tests
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
