--- a/content/cypress-fundamentals/cypress-runs-in-the-browser.mdx
+++ b/content/cypress-fundamentals/cypress-runs-in-the-browser.mdx
@@ -1,5 +1,10 @@
 ---
 title: Cypress Runs in the Browser
 ---
+# Cypress Runs in the Browser
 
-Cypress Runs in the Browser
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
