--- a/content/cypress-fundamentals/understanding-the-asynchronous-nature-of-cypress.mdx
+++ b/content/cypress-fundamentals/understanding-the-asynchronous-nature-of-cypress.mdx
@@ -1,5 +1,10 @@
 ---
 title: Understanding the Asynchronous Nature of Cypress
 ---
+# Understanding the Asynchronous Nature of Cypress
 
-Understanding the Asynchronous Nature of Cypress
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
