--- a/content/real-world-examples/new-transaction-overview-and-setup.mdx
+++ b/content/real-world-examples/new-transaction-overview-and-setup.mdx
@@ -1,7 +1,7 @@
 ---
-title: Submitting a payment to another user
+title: New Transaction Overview & Setup
 ---
-# Submitting a payment to another user
+# New Transaction Overview & Setup
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
