--- a/content/real-world-examples/user-setting-form-errors.mdx
+++ b/content/real-world-examples/user-setting-form-errors.mdx
@@ -1,5 +1,10 @@
 ---
 title: User Setting Form Errors
 ---
+# User Setting Form Errors
 
-User Setting Form Errors
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
