--- a/content/real-world-examples/verifying-the-deposit-of-a-payment.mdx
+++ b/content/real-world-examples/verifying-the-deposit-of-a-payment.mdx
@@ -1,5 +1,10 @@
 ---
 title: Verifying the deposit of a payment
 ---
+# Verifying the deposit of a payment
 
-Verifying the deposit of a payment
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
