--- a/content/testing-foundations/how-to-write-a-test.mdx
+++ b/content/testing-foundations/how-to-write-a-test.mdx
@@ -1,5 +1,10 @@
 ---
 title: How to Write a Test
 ---
+# How to Write a Test
 
-How to Write a Test
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
