--- a/content/testing-foundations/knowing-what-to-test.mdx
+++ b/content/testing-foundations/knowing-what-to-test.mdx
@@ -1,5 +1,10 @@
 ---
 title: Knowing What to Test
 ---
+# Knowing What to Test
 
-Knowing What to Test
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
