--- a/content/testing-foundations/the-testing-pyramid.mdx
+++ b/content/testing-foundations/the-testing-pyramid.mdx
@@ -1,5 +1,10 @@
 ---
 title: The Testing Pyramid
 ---
+# The Testing Pyramid
 
-The Testing Pyramid
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
