--- a/content/testing-foundations/who-should-be-responsible-for-testing.mdx
+++ b/content/testing-foundations/who-should-be-responsible-for-testing.mdx
@@ -1,5 +1,10 @@
 ---
 title: Who should be responsible for testing?
 ---
+# Who should be responsible for testing?
 
-Who should be responsible for testing?
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
