--- a/content/testing-your-first-application/cypress-log-snapshot-and-aliases.mdx
+++ b/content/testing-your-first-application/cypress-log-snapshot-and-aliases.mdx
@@ -1,5 +1,10 @@
 ---
 title: Cypress Log, Snapshot & Aliases
 ---
+# Cypress Log, Snapshot & Aliases
 
-Cypress Log, Snapshot & Aliases
+## SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+## Another SubHeader
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
