added some default styles to content headings

--- a/content/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -1,10 +1,21 @@
 ---
 title: TodoMVC App Install & Overview
 ---
+
 # TodoMVC App Install & Overview
 
 ## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+Photo booth jean shorts subway tile umami. Hella church-key locavore kombucha gastropub fanny pack semiotics four dollar toast literally 3 wolf moon occupy. Brooklyn fixie street art organic, fingerstache butcher vice waistcoat distillery vape. Forage woke glossier scenester normcore.
+
+Jianbing everyday carry raclette, succulents master cleanse adaptogen cloud bread salvia poke. Cardigan migas hot chicken hella bespoke asymmetrical. Art party lyft marfa coloring book shoreditch pinterest 8-bit. Man braid beard helvetica austin sriracha banjo flannel mlkshk readymade selvage 8-bit aesthetic prism. Live-edge actually fixie, umami chambray YOLO vinyl vice bespoke wayfarers franzen schlitz microdosing. Swag viral dreamcatcher, normcore literally cloud bread kogi venmo street art lumbersexual chillwave.
+
+Hexagon thundercats seitan tousled flannel fashion axe twee craft beer irony succulents la croix kombucha echo park. Affogato shabby chic gentrify, cronut tousled heirloom vinyl marfa pickled. Palo santo authentic seitan, organic glossier health goth jean shorts. Glossier single-origin coffee ramps, squid man braid gastropub godard lyft trust fund wayfarers.
 
 ## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+Hell of chartreuse bushwick everyday carry. Ethical 90's health goth mixtape chambray. Air plant fingerstache tousled, hammock deep v whatever twee quinoa taxidermy scenester you probably haven't heard of them. Poke tousled dreamcatcher raw denim four loko iPhone, palo santo pour-over vape meh kitsch you probably haven't heard of them everyday carry. Prism yr brooklyn, pitchfork fanny pack vexillologist scenester gastropub kitsch migas single-origin coffee normcore pour-over literally quinoa. Mumblecore distillery hella, tumeric letterpress keffiyeh vexillologist aesthetic blog truffaut seitan four dollar toast affogato cold-pressed butcher. Roof party sartorial viral bicycle rights, farm-to-table vinyl pug taxidermy ugh.
+
+Listicle sustainable letterpress fanny pack you probably haven't heard of them, palo santo selvage. Kickstarter cronut austin single-origin coffee glossier enamel pin yr farm-to-table adaptogen church-key. Air plant edison bulb vaporware keffiyeh gluten-free blue bottle, sustainable vegan tumblr. Kale chips kombucha fashion axe man bun leggings cred. Lomo disrupt umami kale chips selvage.
+
+Dummy text? More like dummy thicc text, amirite?
