updated toc links

--- a/content/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -2,11 +2,14 @@
 title: TodoMVC App Install & Overview
 ---
 
-# TodoMVC App Install & Overview
+# TodoMVC App Install and Overview
 
 ## SubHeader
 
-Photo booth jean shorts subway tile umami. Hella church-key locavore kombucha gastropub fanny pack semiotics four dollar toast literally 3 wolf moon occupy. Brooklyn fixie street art organic, fingerstache butcher vice waistcoat distillery vape. Forage woke glossier scenester normcore.
+Photo booth jean shorts subway tile umami. Hella church-key locavore kombucha
+gastropub fanny pack semiotics four dollar toast literally 3 wolf moon occupy.
+Brooklyn fixie street art organic, fingerstache butcher vice waistcoat
+distillery vape. Forage woke glossier scenester normcore.
 
 Jianbing everyday carry raclette, succulents master cleanse adaptogen cloud bread salvia poke. Cardigan migas hot chicken hella bespoke asymmetrical. Art party lyft marfa coloring book shoreditch pinterest 8-bit. Man braid beard helvetica austin sriracha banjo flannel mlkshk readymade selvage 8-bit aesthetic prism. Live-edge actually fixie, umami chambray YOLO vinyl vice bespoke wayfarers franzen schlitz microdosing. Swag viral dreamcatcher, normcore literally cloud bread kogi venmo street art lumbersexual chillwave.
 
