added tailwind ui content styles to lessson content

--- a/content/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -6,9 +6,7 @@ title: TodoMVC App Install & Overview
 
 The application we will be writing tests for can be found [here](https://github.com/cypress-io/cypress-example-todomvc). This is a simple TodoMVC application built with React. Don't worry if you do not know React. You will be able to easily follow along even if you have never used React before.
 
-# Install
-
----
+## Install
 
 The first thing you should do is fork this repo into your own GitHub account. You can do this by clicking the "fork" button in the upper right hand corner of the repo.
 
@@ -43,13 +41,11 @@ Then to start the app:
 npm run start
 ```
 
-You can then open your browser to [`http://127.0.0.1:8888`](http://127.0.0.1:8888/) and you should see the following:
+You can then open your browser to [`http://localhost:8888`](http://localhost:8888/) and you should see the following:
 
 ![Screenshot of TodoMVC Home App](/images/testing-your-first-application/todomvc-install-and-overview/Screen_Shot_2021-06-24_at_1.08.11_PM.png)
 
-# App Overview
-
----
+## App Overview
 
 ![Screenshot of TodoMVC Home App with three todos added](/images/testing-your-first-application/todomvc-install-and-overview/Screen_Shot_2021-06-24_at_1.14.12_PM.png)
 
