created advanced cypress concepts dummy content

--- a/content/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
+++ b/content/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
@@ -1,7 +1,7 @@
 ---
-title: Installing Cypress and writing our first test
+title: Building the Right Cypress Commands
 ---
-# Installing Cypress and writing our first test
+# Building the Right Cypress Commands
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
