--- a/content/advanced-cypress-concepts/cypress-ui-overview.mdx
+++ b/content/advanced-cypress-concepts/cypress-ui-overview.mdx
@@ -1,7 +1,7 @@
 ---
-title: Installing Cypress and writing our first test
+title: Cypress UI Overview
 ---
-# Installing Cypress and writing our first test
+# Cypress UI Overview
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
