--- a/content/advanced-cypress-concepts/database-initialization-and-seeding.mdx
+++ b/content/advanced-cypress-concepts/database-initialization-and-seeding.mdx
@@ -1,7 +1,7 @@
 ---
-title: Installing Cypress and writing our first test
+title: Database Initialization and Seeding
 ---
-# Installing Cypress and writing our first test
+# Database Initialization and Seeding
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
