--- a/content/advanced-cypress-concepts/how-to-debug-failing-tests.mdx
+++ b/content/advanced-cypress-concepts/how-to-debug-failing-tests.mdx
@@ -1,7 +1,7 @@
 ---
-title: Installing Cypress and writing our first test
+title: How to Debug Failing Tests
 ---
-# Installing Cypress and writing our first test
+# How to Debug Failing Tests
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
