--- a/content/advanced-cypress-concepts/intercepting-network-requests.mdx
+++ b/content/advanced-cypress-concepts/intercepting-network-requests.mdx
@@ -1,7 +1,7 @@
 ---
-title: Installing Cypress and writing our first test
+title: Intercepting Network Requests
 ---
-# Installing Cypress and writing our first test
+# Intercepting Network Requests
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
