--- a/content/cypress-fundamentals/waiting-and-retry-ability.mdx
+++ b/content/cypress-fundamentals/waiting-and-retry-ability.mdx
@@ -1,7 +1,7 @@
 ---
-title: Waiting & Retry-ability
+title: Waiting and Retry-ability
 ---
-# Waiting & Retry-ability
+# Waiting and Retry-ability
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
