--- a/content/testing-your-first-application/cypress-log-snapshot-and-aliases.mdx
+++ b/content/testing-your-first-application/cypress-log-snapshot-and-aliases.mdx
@@ -1,7 +1,7 @@
 ---
-title: Cypress Log, Snapshot & Aliases
+title: Cypress Log, Snapshot and Aliases
 ---
-# Cypress Log, Snapshot & Aliases
+# Cypress Log, Snapshot and Aliases
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
