--- a/content/testing-your-first-application/multiple-todos-and-before-each.mdx
+++ b/content/testing-your-first-application/multiple-todos-and-before-each.mdx
@@ -1,7 +1,7 @@
 ---
-title: Multiple Todos & Before Each
+title: Multiple Todos and Before Each
 ---
-# Multiple Todos & Before Each
+# Multiple Todos and Before Each
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
