--- a/content/advanced-cypress-concepts/cypress-is-just-javascript.mdx
+++ b/content/advanced-cypress-concepts/cypress-is-just-javascript.mdx
@@ -1,7 +1,7 @@
 ---
-title: Installing Cypress and writing our first test
+title: Cypress is Just JavaScript
 ---
-# Installing Cypress and writing our first test
+# Cypress is Just JavaScript
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
