--- a/content/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
+++ b/content/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
@@ -1,7 +1,7 @@
 ---
-title: Installing Cypress and writing our first test
+title: How to Test Various Browsers and Viewports
 ---
-# Installing Cypress and writing our first test
+# How to Test Various Browsers and Viewports
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
