--- a/content/advanced-cypress-concepts/import-cypress-methods.mdx
+++ b/content/advanced-cypress-concepts/import-cypress-methods.mdx
@@ -1,7 +1,7 @@
 ---
-title: Installing Cypress and writing our first test
+title: Import Cypress Methods
 ---
-# Installing Cypress and writing our first test
+# Import Cypress Methods
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
