--- a/content/advanced-cypress-concepts/managing-your-ci-pipeline.mdx
+++ b/content/advanced-cypress-concepts/managing-your-ci-pipeline.mdx
@@ -1,7 +1,7 @@
 ---
-title: Installing Cypress and writing our first test
+title: Managing Your CI Pipeline
 ---
-# Installing Cypress and writing our first test
+# Managing Your CI Pipeline
 
 ## SubHeader
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
