updated scripts to fix RWE slugs and create RWE content

--- a/content/real-world-examples/transaction-view/rejects-a-transaction-request.mdx
+++ b/content/real-world-examples/transaction-view/rejects-a-transaction-request.mdx
@@ -7,4 +7,4 @@ title: Rejects a Transaction Request
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
 
 ## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elitsectetur adipiscing elit
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
