--- a/content/real-world-examples/authentication/unauthenticated-users.mdx
+++ b/content/real-world-examples/authentication/unauthenticated-users.mdx
@@ -7,4 +7,4 @@ title: Unauthenticated Users
 Lorem ipsum dolor sit amet, consectetur adipiscing elit
 
 ## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elitctetur adipiscing elit
+Lorem ipsum dolor sit amet, consectetur adipiscing elit
