--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -9,9 +9,7 @@ Title Approved: Yes
 
 The application we will be writing tests for can be found [here](https://github.com/cypress-io/cypress-example-todomvc). This is a simple TodoMVC application built with React. Don't worry if you do not know React. You will be able to easily follow along even if you have never used React before.
 
-# Install
-
----
+## Install
 
 The first thing you should do is fork this repo into your own GitHub account. You can do this by clicking the "fork" button in the upper right hand corner of the repo.
 
@@ -50,9 +48,7 @@ You can then open your browser to [`http://127.0.0.1:8888`](http://127.0.0.1:888
 
 ![](/images/testing-your-first-application/todomvc-app-install-overview/Screen_Shot_2021-06-24_at_1.08.11_PM.png)
 
-# App Overview
-
----
+## App Overview
 
 ![](/images/testing-your-first-application/todomvc-app-install-overview/Screen_Shot_2021-06-24_at_1.14.12_PM.png)
 
