--- a/content/courses/testing-your-first-application/how-to-use-cypress-commands.mdx
+++ b/content/courses/testing-your-first-application/how-to-use-cypress-commands.mdx
@@ -1,10 +1,166 @@
----
-title: How to use Cypress Commands
----
 # How to use Cypress Commands
 
-## SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+Diataxis Type: Tutorial
+Ready for Review: Yes
+Reviewed By: Amir, Jordan, Kevin, Paul
+Reviewed By Amir: August 11, 2021
+Reviewed By Kevin: July 29, 2021
+Section: Testing Your First App
+Status: Ready to Migrate
+Title Approved: Yes
 
-## Another SubHeader
-Lorem ipsum dolor sit amet, consectetur adipiscing elit
+We are starting to make excellent progress thus far, but we have even more exciting things to learn. Within this lesson, we are going to learn about [Cypress commands](https://docs.cypress.io/api/cypress-api/custom-commands). Cypress commands are custom commands that we can write ourselves to make portions of our test code re-usable. 
+
+[Cypress commands](https://docs.cypress.io/api/cypress-api/custom-commands) are incredibly useful. As your test suite grows, you will find yourself reaching for them more and more to help simplify and re-use portions of your test code.
+
+For our specific use case, let's write a custom Cypress command that will create some default todos for us. This way, we will have a single line of code that will generate some todos in our app each time we use it.
+
+Open the `cypress/support/commands.js` file and write the following.
+
+```jsx
+Cypress.Commands.add('createDefaultTodos', () => {
+  
+})
+```
+
+Let's first copy the variables from our test file into this new command. 
+
+```jsx
+Cypress.Commands.add('createDefaultTodos', () => {
+  const TODO_ITEM_ONE = 'Buy Milk'
+  const TODO_ITEM_TWO = 'Pay Rent'
+  const TODO_ITEM_THREE = 'Pickup Dry Cleaning'
+})
+```
+
+Now let's add the ability to create our todos.
+
+```jsx
+Cypress.Commands.add('createDefaultTodos', () => {
+  const TODO_ITEM_ONE = 'Buy Milk'
+  const TODO_ITEM_TWO = 'Pay Rent'
+  const TODO_ITEM_THREE = 'Pickup Dry Cleaning'
+
+  cy.get('.new-todo')
+    .type(`${TODO_ITEM_ONE}{enter}`)
+    .type(`${TODO_ITEM_TWO}{enter}`)
+    .type(`${TODO_ITEM_THREE}{enter}`)
+})
+```
+
+Now let's update our second test to use this new command.
+
+```jsx
+it('adds three todos', () => {
+  cy.createDefaultTodos()
+  cy.get('.todo-list li').should('have.length', 3)
+})
+```
+
+![How%20to%20use%20Cypress%20Commands%2084d4d7f3ed9847e3a070b9dc0d89f568/Screen_Shot_2021-06-25_at_12.02.31_PM.png](How%20to%20use%20Cypress%20Commands%2084d4d7f3ed9847e3a070b9dc0d89f568/Screen_Shot_2021-06-25_at_12.02.31_PM.png)
+
+Great, our tests are still passing and our new command is working perfectly.
+
+# Testing the order in which todos are added
+
+Now let's write a simple test to ensure each todo is added in the correct order, which means that each new todo is appended to the bottom of the list.
+
+First we will create a new `it()` block.
+
+```jsx
+it('should append new items to the bottom of the list', () => {
+    
+})
+```
+
+Next we can use our new `createDefaultTodos()` to add some todo's to the app. 
+
+```jsx
+it('should append new items to the bottom of the list', () => {
+  cy.createDefaultTodos()
+})
+```
+
+![How%20to%20use%20Cypress%20Commands%2084d4d7f3ed9847e3a070b9dc0d89f568/Screen_Shot_2021-06-25_at_12.08.55_PM.png](How%20to%20use%20Cypress%20Commands%2084d4d7f3ed9847e3a070b9dc0d89f568/Screen_Shot_2021-06-25_at_12.08.55_PM.png)
+
+Now let's make some assertions to make sure each todo is in the correct order.
+
+```jsx
+it('should append new items to the bottom of the list', () => {
+    cy.createDefaultTodos()
+
+    // Todo 1
+    cy.get('.todo-list li')
+      .eq(0)
+      .find('label')
+      .should('contain', TODO_ITEM_ONE)
+
+    // Todo 2
+    cy.get('.todo-list li')
+      .eq(1)
+      .find('label')
+      .should('contain', TODO_ITEM_TWO)
+
+    // Todo 3
+    cy.get('.todo-list li')
+      .eq(2)
+      .find('label')
+      .should('contain', TODO_ITEM_THREE)
+  })
+```
+
+All tests are still passing. 
+
+While we are at it, we can also assert that three todos have been added. However, let's do it differently than before. 
+
+In our previous tests we are asserting the number of todo's like so:
+
+```jsx
+cy.get('.todo-list li').should('have.length', 3)
+```
+
+This is entirely valid, but there is also another way.
+
+Within the bottom left-hand corner of our app is some text that says "x items left," where x is the current number of todos left to be completed. 
+
+Let's assert that this text is displaying the correct message and number of todos.
+
+![How%20to%20use%20Cypress%20Commands%2084d4d7f3ed9847e3a070b9dc0d89f568/Screen_Shot_2021-06-25_at_12.16.12_PM.png](How%20to%20use%20Cypress%20Commands%2084d4d7f3ed9847e3a070b9dc0d89f568/Screen_Shot_2021-06-25_at_12.16.12_PM.png)
+
+After finding the element with our dev tools, we can write the assertion like so:
+
+```jsx
+cy.get('.todo-count').contains('3 items left')
+```
+
+So our entire test now looks like this:
+
+```jsx
+it('should append new items to the bottom of the list', () => {
+    cy.createDefaultTodos()
+
+    // Todo 1
+    cy.get('.todo-list li')
+      .eq(0)
+      .find('label')
+      .should('contain', TODO_ITEM_ONE)
+
+    // Todo 2
+    cy.get('.todo-list li')
+      .eq(1)
+      .find('label')
+      .should('contain', TODO_ITEM_TWO)
+
+    // Todo 3
+    cy.get('.todo-list li')
+      .eq(2)
+      .find('label')
+      .should('contain', TODO_ITEM_THREE)
+
+    cy.get('.todo-count').contains('3 items left')
+  })
+```
+
+You will notice that our `.todo-count` is a `<span>` with multiple elements nested inside of it. The number is wrapped in a `<strong>` tag, and the words are wrapped in `<span>` tags. The `.contains()` method will find the appropriate text even though it may be nested in several different tags 🔥
+
+In the above example, we use both `.should('contain')`, and `.contains()`. You can find out more info about `should` [here](https://docs.cypress.io/api/commands/should) and `contains` [here](https://docs.cypress.io/api/commands/contains).
